fix(interface): :lipstick: increase `letter-spacing`

--- a/src/style/stylesheet.css
+++ b/src/style/stylesheet.css
@@ -96,7 +96,7 @@ h2 {
 	color: var(--grey-text-colour);
 	font-size: 1.15em;
 	margin-block-end: 0.23rem;
-	letter-spacing: 0.025em;
+	letter-spacing: 0.04em;
 }
 
 h3 {
@@ -267,7 +267,7 @@ button:disabled {
 
 label {
 	text-transform: uppercase;
-	letter-spacing: 0.015em;
+	letter-spacing: 0.04em;
 	color: var(--light-grey-text-colour);
 	font-weight: 500;
 }
